add new section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <h1>Test 11</h1>
+    <h1>Nurmuhammad</h1>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita
+      nesciunt quaerat? Ipsum minus perferendis delectus sed corporis similique
+      corrupti assumenda deserunt quod officiis ipsam temporibus maxime natus,
+      ab veritatis eum animi cumque quos culpa veniam magni accusantium officia.
+      Laborum rem architecto repellendus quia quos voluptatem voluptatum
+      sapiente assumenda nobis!
+    </p>
   </body>
 </html>
