--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       Laborum rem architecto repellendus quia quos voluptatem voluptatum
       sapiente assumenda nobis!
     </p>
+
+    <img src="./img/teatrposter3.jpg" alt="teatr image" />
   </body>
 </html>
